[gd_scene load_steps=48 format=3 uid="uid://iellk33xgjhc"]

[ext_resource type="Script" uid="uid://1nw2omx3qxfa" path="res://scene/Enemy/knight_base.gd" id="1_ovgof"]
[ext_resource type="Texture2D" uid="uid://p2js25a84u72" path="res://Assets/character/GandalfHardcore Warrior.png" id="1_xpg0i"]
[ext_resource type="PackedScene" uid="uid://drc15xactq2x7" path="res://scene/handlers/flip_handler.tscn" id="2_ovgof"]
[ext_resource type="Script" uid="uid://cpshoaoij2d7y" path="res://scene/handlers/gravity_handler.gd" id="3_etfal"]
[ext_resource type="Script" uid="uid://bgluubxxgicks" path="res://scene/handlers/movement_handler.gd" id="5_hdbv3"]
[ext_resource type="Script" uid="uid://tsaabgoj48ck" path="res://scene/handlers/enemy/ai_handler.gd" id="6_a1hte"]
[ext_resource type="Script" uid="uid://cnnm5hxm7i7b1" path="res://scene/handlers/death_handler.gd" id="7_1kl7h"]
[ext_resource type="Script" uid="uid://3u18amy04ntt" path="res://scene/handlers/drop_handler.gd" id="8_hf734"]
[ext_resource type="Script" uid="uid://dnlomrpambk1i" path="res://scene/handlers/health_handler.gd" id="9_t51gr"]
[ext_resource type="PackedScene" uid="uid://cobs3nhfhj316" path="res://scene/handlers/hurt_box.tscn" id="10_8v8r7"]
[ext_resource type="PackedScene" uid="uid://bd3teekf53c7k" path="res://scene/handlers/hit_box_handler.tscn" id="11_701n7"]
[ext_resource type="AudioStream" uid="uid://cqfwww2vkr7ap" path="res://Assets/audio/boss_destroy.wav" id="12_a1hte"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6qyq0"]
atlas = ExtResource("1_xpg0i")
region = Rect2(0, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaqmh"]
atlas = ExtResource("1_xpg0i")
region = Rect2(80, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jch0g"]
atlas = ExtResource("1_xpg0i")
region = Rect2(160, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djvl1"]
atlas = ExtResource("1_xpg0i")
region = Rect2(240, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8vug"]
atlas = ExtResource("1_xpg0i")
region = Rect2(320, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dh0"]
atlas = ExtResource("1_xpg0i")
region = Rect2(400, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jubtp"]
atlas = ExtResource("1_xpg0i")
region = Rect2(480, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpi3g"]
atlas = ExtResource("1_xpg0i")
region = Rect2(560, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_emhri"]
atlas = ExtResource("1_xpg0i")
region = Rect2(640, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlpp0"]
atlas = ExtResource("1_xpg0i")
region = Rect2(720, 1024, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur464"]
atlas = ExtResource("1_xpg0i")
region = Rect2(0, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl3of"]
atlas = ExtResource("1_xpg0i")
region = Rect2(80, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqvpd"]
atlas = ExtResource("1_xpg0i")
region = Rect2(160, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgl16"]
atlas = ExtResource("1_xpg0i")
region = Rect2(240, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfvik"]
atlas = ExtResource("1_xpg0i")
region = Rect2(320, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdcwp"]
atlas = ExtResource("1_xpg0i")
region = Rect2(400, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdbv3"]
atlas = ExtResource("1_xpg0i")
region = Rect2(0, 896, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta8kb"]
atlas = ExtResource("1_xpg0i")
region = Rect2(0, 448, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkxol"]
atlas = ExtResource("1_xpg0i")
region = Rect2(80, 448, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vret"]
atlas = ExtResource("1_xpg0i")
region = Rect2(160, 448, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ygwf"]
atlas = ExtResource("1_xpg0i")
region = Rect2(240, 448, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kf2w"]
atlas = ExtResource("1_xpg0i")
region = Rect2(320, 448, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1hte"]
atlas = ExtResource("1_xpg0i")
region = Rect2(0, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kl7h"]
atlas = ExtResource("1_xpg0i")
region = Rect2(80, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf734"]
atlas = ExtResource("1_xpg0i")
region = Rect2(160, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t51gr"]
atlas = ExtResource("1_xpg0i")
region = Rect2(240, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v8r7"]
atlas = ExtResource("1_xpg0i")
region = Rect2(320, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_701n7"]
atlas = ExtResource("1_xpg0i")
region = Rect2(400, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5d4a"]
atlas = ExtResource("1_xpg0i")
region = Rect2(480, 512, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nve7x"]
atlas = ExtResource("1_xpg0i")
region = Rect2(560, 512, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgqc2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qyq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaqmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jch0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djvl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8vug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jubtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpi3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emhri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlpp0")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur464")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl3of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqvpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgl16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdcwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdbv3")
}],
"loop": false,
"name": &"hit",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta8kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkxol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vret")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ygwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kf2w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1hte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kl7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf734")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t51gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v8r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_701n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5d4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nve7x")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hdbv3"]
height = 22.0403

[sub_resource type="CircleShape2D" id="CircleShape2D_hdbv3"]
radius = 21.3132

[sub_resource type="CircleShape2D" id="CircleShape2D_a1hte"]
radius = 19.9249

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1hte"]
size = Vector2(14.9366, 42.9726)

[node name="KnightBase" type="CharacterBody2D"]
rotation = 0.0289567
collision_layer = 4
script = ExtResource("1_ovgof")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(-0.809422, 0.906753)
sprite_frames = SubResource("SpriteFrames_mgqc2")
animation = &"die"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_hdbv3")

[node name="FlipHandler" parent="." instance=ExtResource("2_ovgof")]

[node name="GravityHandler" type="Node2D" parent="."]
script = ExtResource("3_etfal")
metadata/_custom_type_script = "uid://cpshoaoij2d7y"

[node name="MovementHandler" type="Node2D" parent="."]
script = ExtResource("5_hdbv3")
move_speed = 50.0
acceleration = 10.0
metadata/_custom_type_script = "uid://bgluubxxgicks"

[node name="AIHandler" type="Node2D" parent="." node_paths=PackedStringArray("left_cast", "right_cast", "left_wall_cast", "right_wall_cast", "movement")]
script = ExtResource("6_a1hte")
left_cast = NodePath("../leftWCast")
right_cast = NodePath("../RightWCast")
left_wall_cast = NodePath("../leftCast")
right_wall_cast = NodePath("../RightCast")
movement = NodePath("../MovementHandler")
metadata/_custom_type_script = "uid://tsaabgoj48ck"

[node name="DeathHandler" type="Node2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("7_1kl7h")
parent = NodePath("..")
type = "Enemy"
metadata/_custom_type_script = "uid://cnnm5hxm7i7b1"

[node name="DropHandler" type="Node2D" parent="."]
script = ExtResource("8_hf734")
metadata/_custom_type_script = "uid://3u18amy04ntt"

[node name="HealthHandler" type="Node2D" parent="." node_paths=PackedStringArray("death_handler")]
script = ExtResource("9_t51gr")
max_health = 6
death_handler = NodePath("../DeathHandler")
type = "Enemy"
metadata/_custom_type_script = "uid://dnlomrpambk1i"

[node name="HurtBox" parent="." instance=ExtResource("10_8v8r7")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_hdbv3")
debug_color = Color(0, 0.0588235, 0.701961, 0.419608)

[node name="HitBoxHandler" parent="." node_paths=PackedStringArray("health_handler") instance=ExtResource("11_701n7")]
process_mode = 1
collision_layer = 4
collision_mask = 2
time = 0.5
health_handler = NodePath("../HealthHandler")

[node name="CollisionShape2D" parent="HitBoxHandler" index="0"]
position = Vector2(-0.739007, 9.02518)
shape = SubResource("CircleShape2D_a1hte")
debug_color = Color(0.776471, 0, 0, 0.419608)

[node name="RightWCast" type="RayCast2D" parent="."]
position = Vector2(8, 9)
target_position = Vector2(0, 33)

[node name="RightCast" type="RayCast2D" parent="."]
position = Vector2(8, 9)
target_position = Vector2(28, 0)

[node name="leftWCast" type="RayCast2D" parent="."]
position = Vector2(-8, 9)
target_position = Vector2(1, 33)

[node name="leftCast" type="RayCast2D" parent="."]
position = Vector2(-8, 9)
target_position = Vector2(-28, 0)

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0.0579053, 1.99916)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-0.76796, 8.0256)
rotation = 1.55147
shape = SubResource("RectangleShape2D_a1hte")
debug_color = Color(0.921569, 0.6, 0.701961, 0.419608)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_a1hte")

[editable path="HurtBox"]
[editable path="HitBoxHandler"]
